--- a/index.html
+++ b/index.html
@@ -4,19 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Lucky Number</title>
 </head>
-<h1> Is your birthday is lucky Number?</h1>
+
 
 <body>
+    <h1> Is your birthday is lucky ? 🥳</h1>
     <div class="container">
-    <label for="date-input">Date of Birth</label>
+    <label for="date-input">Date of Birth 👇</label>
     <input id="date-input" type="date">
-    <label for="lucky-num" type="text">Select lucky Number</label>
+    <label for="lucky-num" type="text">Enter lucky Number 👇 </label>
     <input type="text" id="lucky-num">
-     <button id="btn-click">Check</button>
+     <button id="btn-click">Check 😉</button>
      <div id="show-msg"></div>
+
      </div>
+
+     <footer>
+        <h1>My Social Media Presence 😎</h1>
+      <ul class="link social-link">
+
+       <li class="link"> <a  class="txtdecor" href="/">Github</a></li> 
+          <li class="link"> <a class="txtdecor" href="/">LinkedIn</a></li>
+          <li class="link"> <a class="txtdecor" href="/">Twitter</a>
+          </li>
+
+
+      </ul>
+    
+           
+     </footer>
 
     <script src="index.js"></script>
 </body>
