--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <h1>My Social Media Presence 😎</h1>
       <ul class="link social-link">
 
-       <li class="link"> <a  class="txtdecor" href="/">Github</a></li> 
-          <li class="link"> <a class="txtdecor" href="/">LinkedIn</a></li>
-          <li class="link"> <a class="txtdecor" href="/">Twitter</a>
+       <li class="link"> <a  class="txtdecor" href="https://github.com/Shivang-purrohit">Github</a></li> 
+          <li class="link"> <a class="txtdecor" href="https://www.linkedin.com/in/shivang-purrohit-aabb2922b/">LinkedIn</a></li>
+          <li class="link"> <a class="txtdecor" href="https://twitter.com/purohit_shivang">Twitter</a>
           </li>
 
 
